welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: type mismatch;
 found   : Int(10)
 required: (Int, Int, Int)
		case 10 => return 10
                     ^blueTicket:7: error: not found: value >
		case _>10=> return 5
                      ^